<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="Logo da loja"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="100dp"
        app:srcCompat="@drawable/parceiro_magalu_jpeg" />

    <TextView
        android:id="@+id/tvNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Olá, nome sobrenome"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.89"
        tools:text="Olá, nome sobrenome" />

    <ImageView
        android:id="@+id/opcoes"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:contentDescription="Icone de configuracao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_build_24" />

    <Button
        android:id="@+id/buttonAgendaVisita"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="25dp"
        android:text="@string/button_agenda"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#512DA8"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_calendar"
        app:iconSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeUsuario"
        app:layout_constraintVertical_bias="0.05"
        tools:layout_editor_absoluteX="25dp" />

    <Button
        android:id="@+id/buttonHunting"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="25dp"
        android:text="@string/button_hunting"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#7B1FA2"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_hunting"
        app:iconSize="70dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgendaVisita"
        tools:layout_editor_absoluteX="25dp" />

    <Button
        android:id="@+id/buttonVisitasRealizadas"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="25dp"
        android:text="@string/button_visitas_realizadas"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#303F9F"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_clock"
        app:iconSize="70dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonHunting"
        tools:layout_editor_absoluteX="25dp" />



</androidx.constraintlayout.widget.ConstraintLayout>