<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetalhesAgendamentoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarDetalhes"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_back_white"
            app:title="Detalhes agendamento" />

        <!--        TODO colocar icone no appbar de deletat-->

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- Scrollable content -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--  Meu conteudo aqui-->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:strokeColor="#39106C"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- TODO trocar essa view pelo MAPS no futuro -->
                    <ImageView
                        android:id="@+id/google_maps"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:contentDescription="@string/content_description_mapa"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/google_maps_image"
                        tools:ignore="ImageContrastCheck" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerThickness="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/google_maps" />

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/nome_loja_detalhe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="@+id/google_maps"
                        app:layout_constraintStart_toStartOf="@+id/google_maps"
                        app:layout_constraintTop_toBottomOf="@+id/google_maps"
                        tools:text="Nome da Loja" />

                    <TextView
                        android:id="@+id/data_detalhe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        app:layout_constraintStart_toStartOf="@+id/abrir_checklist_button"
                        app:layout_constraintTop_toBottomOf="@+id/nome_loja_detalhe"
                        tools:text="Data da visita" />

                    <TextView
                        android:id="@+id/hora_detalhe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        app:layout_constraintStart_toStartOf="@+id/data_detalhe"
                        app:layout_constraintTop_toBottomOf="@+id/data_detalhe"
                        tools:text="Hora da visita" />

                    <TextView
                        android:id="@+id/telefone_detalhe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        app:layout_constraintEnd_toEndOf="@+id/chamada_button"
                        app:layout_constraintTop_toTopOf="@id/data_detalhe"
                        tools:text="Telefone" />

                    <TextView
                        android:id="@+id/tag_detalhe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        app:layout_constraintEnd_toEndOf="@+id/telefone_detalhe"
                        app:layout_constraintTop_toTopOf="@+id/hora_detalhe"
                        tools:text="TAG" />

                    <Button
                        android:id="@+id/abrir_checklist_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/button_checklist"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/chamada_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hora_detalhe" />

                    <Button
                        android:id="@+id/chamada_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/button_ligar"
                        app:icon="@drawable/ic_chamada"
                        app:layout_constraintBottom_toBottomOf="@+id/abrir_checklist_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/abrir_checklist_button"
                        app:layout_constraintTop_toTopOf="@+id/abrir_checklist_button" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>