<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.agenda.DetalhesAgendamentoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarAdd"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_back_white"
            app:title="@string/topbar_title_add" />

        <!--        TODO colocar icone no appbar de deletat-->

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_nome_loja"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:hint="Nome da loja"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            adicionar data e hora-->


            <TextView
                android:id="@+id/tf_date_agendamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/button_pick_date"
                app:layout_constraintEnd_toStartOf="@+id/tf_hora_agendamento"
                app:layout_constraintStart_toEndOf="@+id/button_pick_date"
                app:layout_constraintTop_toTopOf="@+id/button_pick_date" />

            <TextView
                android:id="@+id/tf_hora_agendamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hora"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tf_date_agendamento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tf_date_agendamento"
                app:layout_constraintTop_toTopOf="@+id/tf_date_agendamento" />

            <Button
                android:id="@+id/button_pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="Data e hora"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tf_nome_loja" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_telefone_agendamento"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:hint="Telefone"
                app:layout_constraintStart_toStartOf="@+id/tf_nome_loja"
                app:layout_constraintTop_toBottomOf="@id/button_pick_date"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_endereco_agendamento"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:hint="Endereço"
                app:layout_constraintStart_toStartOf="@+id/tf_telefone_agendamento"
                app:layout_constraintTop_toBottomOf="@id/tf_telefone_agendamento"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tags_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:text="Tags"
                android:textColor="#1976D2"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tf_nome_loja"
                app:layout_constraintTop_toBottomOf="@+id/tf_endereco_agendamento" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/tags_title">

                <!--TODO adicionar codigo para adicionar os enums-->
                <!-- Chips can be declared here, or added dynamically. -->

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_observacao_agendamento"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:hint="Obs"
                app:layout_constraintStart_toStartOf="@+id/tf_date_agendamento"
                app:layout_constraintTop_toBottomOf="@id/chipGroup"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_add_agenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:text="@string/cb_add_agenda"
                android:textSize="16sp"
                app:buttonTint="@color/teal_700"
                app:layout_constraintStart_toStartOf="@id/tf_observacao_agendamento"
                app:layout_constraintTop_toBottomOf="@id/tf_observacao_agendamento" />

            <Button
                android:id="@+id/button_adicionar_agendamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:paddingHorizontal="35dp"
                android:paddingVertical="15dp"
                android:text="@string/button_salvar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_add_agenda" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>